--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-23 Sep 2025</p>
+24 Sep 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -558,6 +558,9 @@ let me know if I missed you!</p>
 <p>Randy Merkel provided the ZSDOS Programmer’s Manual as translated by
   Wayne Hortensius.</p>
 </li>
+<li>
+<p>Henk Berends added support for the MSX platform.</p>
+</li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
 <p>Outside of the hardware platforms adapted to RomWBW, there are a variety
@@ -701,5 +704,5 @@ control system to ensure their contributions are clearly documented.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-09-23 21:07:10.649950+00:00
+Build Date UTC : 2025-09-24 21:31:07.082359+00:00
 -->
