--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-23 Sep 2025</p>
+24 Sep 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -567,6 +567,9 @@ let me know if I missed you!</p>
 <li>
 <p>Randy Merkel provided the ZSDOS Programmer’s Manual as translated by
   Wayne Hortensius.</p>
+</li>
+<li>
+<p>Henk Berends added support for the MSX platform.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
