--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -396,7 +396,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-12 Oct 2025</p>
+13 Oct 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -2483,7 +2483,8 @@ specifically for ROM-less RomWBW. HBIOS is loaded from disk at boot</p>
 <p>Eazy80-512 is Eazy80 rev2 pc board configured with 512K RAM to run
 RomWBW. The design was derived from modifications to Eazy80 Rev1 that
 supported RomWBW.</p>
-<p>HBIOS is loaded from disk at boot by ROM monitor</p>
+<p>HBIOS is loaded from disk at boot by ROM monitor or via a a compressed
+ROM image.</p>
 <p>(Not to be confused with EasyZ80)</p>
 <ul>
 <li>Creator: Bill Shen</li>
@@ -2537,6 +2538,31 @@ supported RomWBW.</p>
 </tr>
 </tbody>
 </table>
+<h4 id="compressed-rom-image-file-rcz80_ez512_std_64krom">Compressed ROM Image File: RCZ80_ez512_std_64k.rom</h4>
+<p>A 64K ROM image is supported. As there were many areas of \$00 and \$FF
+bytes in RomWBW, it is possible to compress the 128K RomWBW *.upd file
+to fit into 64K ROM. The compression routine looks for two or more
+consecutive bytes of the same value (any values of \$00 to \$FF). If it
+finds duplicates, it would leave two duplicate bytes followed by a byte
+count, n-1, (with a max byte count of \$FF) where n is the total number
+of duplicates.</p>
+<p>A stand-alone program written in C creates a ready-to-flash binary file
+for the 64K ROM. The 64K binary file is in the following format. Layout
+of the 64K ROM:</p>
+<ul>
+<li>
+<p>The first 3 bytes are always \$C3 \$00 \$FF, a jump to the Z80
+  decompression code located at \$FF00 in the ROM.</p>
+</li>
+<li>
+<p>Locations \$0003 up to, and including, \$FEFF are then available to
+  store the compressed 128K *.upd file.</p>
+</li>
+<li>
+<p>Locations \$FF00 up to \$FFFF, a seperate Z80 decompression routine
+  that executes at startup to decompress the the 64K ROM into RAM.</p>
+</li>
+</ul>
 <h4 id="supported-hardware_22">Supported Hardware</h4>
 <ul>
 <li>DSRTC: MODE=STD, IO=192</li>
